# plugin-github

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  LICENSE  README.md  aoe-plugin.toml  cliff.toml  pyproject.toml  worker.py
.github/: dependabot.yml
.github/workflows/: checks.yml  prepare-release.yml  release.yml  tag-release-pr.yml
history/: plan-multi-session-refresh.md  plan-rate-limit-conditional-polling.md  plan-rich-pr-state.md
scripts/: __init__.py  featured_index.py
src/aoe_github_plugin/: __init__.py  auth.py  client.py  errors.py  graphql.py  handlers.py  main.py  refresh.py  uistate.py
src/aoe_github_plugin/utils/: __init__.py  gitctx.py  rpc.py
tests/: test_auth.py  test_client.py  test_config.py  test_featured_index.py  test_gitctx.py  test_graphql.py  test_handlers.py  test_main.py  test_manifest.py  test_refresh.py  test_runtime_pruning.py  test_uistate.py
